--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,30 @@
-baseURL = "http://example.org/"
+baseURL = "https://prymeka.github.io/sample-blog/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Sample Blog"
+summaryLength = 50
+paginate = 5
+
+[taxonomies]
+  tag = "tags"
+  category = "categories"
+  author = "authors"
+
+[related]
+  includeNewer = true
+  threshold = 80
+  toLower = false
+[[related.indices]]
+  name = 'keywords'
+  weight = 100
+[[related.indices]]
+  name = 'tags'
+  weight = 70
+[[related.indices]]
+  name = 'categories'
+  weight = 30
+[[related.indices]]
+  name = 'authors'
+  weight = 20
+[[related.indices]]
+  name = 'date'
+  weight = 10
